--- a/Project Code.ipynb
+++ b/Project Code.ipynb
@@ -41,7 +41,7 @@
     "import os\n",
     "print(os.listdir(r\"C:\\Users\\eddie\\OneDrive\\Desktop\\CISC 4900\"))         #print out what's in the file/directory\n",
     "\n",
-    "train = pd.read_csv(r\"C:\\Users\\eddie\\OneDrive\\Desktop\\CISC 4900\\Test_datset.csv\")         #using test\n",
+    "train = pd.read_csv(r\"C:\\Users\\eddie\\OneDrive\\Desktop\\CISC 4900\\Test_dataset.csv\")         #using test\n",
     "\n",
     "\n",
     "test = pd.read_csv(r\"C:\\Users\\eddie\\OneDrive\\Desktop\\CISC 4900\\Train_dataset.csv\")         #will use later code works"
