Update Project Code 2 Part 1 (1).ipynb

--- a/Project Code 2 Part 1 (1).ipynb
+++ b/Project Code 2 Part 1 (1).ipynb
@@ -46,9 +46,9 @@
     "'''\n",
     "\n",
     "import os\n",
-    "print(os.listdir(r\"C:\\Users\\eddie\\OneDrive\\Desktop\\CISC 4900\"))         #print out what's in the file/directory\n",
+    "#print(os.listdir(r\"C:\\Users\\eddie\\OneDrive\\Desktop\\CISC 4900\"))         #print out what's in the file/directory\n",
     "\n",
-    "train = pd.read_csv(r\"C:\\Users\\eddie\\OneDrive\\Desktop\\CISC 4900\\Test_dataset.csv\")         #using test\n",
+    "#train = pd.read_csv(r\"C:\\Users\\eddie\\OneDrive\\Desktop\\CISC 4900\\Test_dataset.csv\")         #using test\n",
     "\n",
     "\n",
     "print(os.listdir(r\".\"))         #print out what's in the file/directory\n",
